# flux.io

./: .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
src/: bindings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: layout.tsx  page.tsx  providers.tsx
src/components/: Group.tsx  Icon.tsx
src/components/File/: FileContextMenu.tsx  FileInfo.tsx  FileStatus.tsx
src/components/Widgets/: PremiumWidget.tsx
src/utils/: utils.ts
